<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Common -->
    <string name="app_name">InterMine</string>
    <string name="gene_view">Gene View</string>
    <string name="search">Search</string>
    <string name="search_all">Search All</string>
    <string name="lists">Lists</string>
    <string name="templates">Templates</string>
    <string name="template">Template</string>
    <string name="favorites">Favorites</string>
    <string name="info">Info</string>
    <string name="log_in">Log in</string>
    <string name="mine_specific_header">Mine Specific</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_share">Share</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="acction_add_2_favourites">Add to favourites</string>
    <string name="acction_delete_mine">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="gene_search_hint">Enter gene name</string>
    <string name="template_search_hint">Enter template name</string>
    <string name="template_results_search_hint">Enter keywords</string>
    <string name="mine_name_hint">Enter mine name</string>
    <string name="mine_url_hint">Enter mine API base url</string>
    <string name="not_found">No results found.</string>
    <string name="favorites_requirement_label">Please, login first to see your favorites.</string>
    <string name="gene_added_to_favorites">The gene is added to favorites.</string>
    <string name="login_to_add_to_favorites">Please, login first to add genes to favorites from mines:</string>
    <string name="login_to_see_favorites">Please, login first to see the favorites.</string>
    <string name="loading_label">Loading models...</string>
    <string name="lookup_constraint">LOOKUP</string>
    <string name="operator">Operator</string>
    <string name="value">Value</string>
    <string name="show_results">Show Results</string>
    <string name="share_message">Share text via...</string>

    <!-- Gene Features -->
    <string name="gene_standard_name">Standard Name</string>
    <string name="gene_systematic_name">Systematic Name</string>
    <string name="gene_description">Description</string>
    <string name="gene_name_description">Name Description</string>
    <string name="gene_chromosomal_location">Chromosomal Location</string>
    <string name="gene_ontology_term">Ontology Term</string>
    <string name="gene_name_with_colon">Name:</string>
    <string name="gene_secondary_id_with_colon">Secondary ID:</string>
    <string name="gene_secondary_id">Secondary ID</string>
    <string name="gene_organism_name_with_colon">Organism Name:</string>
    <string name="gene_organism_name">Organism Name</string>
    <string name="gene_organism_short_name_with_colon">Organism Short Name:</string>
    <string name="gene_organism_short_name">Organism Short Name</string>
    <string name="gene_primary_db_id_with_colon">Primary DBID:</string>
    <string name="gene_symbol_with_colon">Symbol:</string>

    <string name="search_path">/query/results</string>
    <string name="lists_path">/lists</string>
    <string name="append_to_lists_path">/lists/append</string>
    <string name="templates_path">/templates</string>
    <string name="template_results_path">/template/results</string>
    <string name="get_token_path">/user/tokens</string>
    <string name="model_path">/model</string>
    <string name="summary_fields">/summaryfields</string>
    <string name="user_preferences_path">/user/preferences</string>
    <string name="report_path">/portal.do</string>
    <string name="list_analysis_path">/bagDetails.do</string>
    <string name="web_template_results_path">/loadTemplate.do?</string>

    <!-- Info page -->
    <string name="app_info">InterMine App version: 1.0\nContact Information: <a href="mailto:info@intermine.org">info@intermine.org</a>\nWebsite: <a href="http://www.intermine.org">www.intermine.org</a></string>
    <string name="app_copyright">© Copyright 2015, University of Cambridge.</string>
    <string name="app_description">\t\tUse InterMine App to quickly find fundamental information about
        genes and chromosomal features. Search gene names, gene descriptions, or browse the databases
        to find information about your favorite gene, as well as more detailed information.</string>
    <string name="info_content">InterMine is an open source data warehouse built specifically for
        the integration and analysis of complex biological data. Developed by the Micklem lab at the
        University of Cambridge, InterMine enables the creation of biological databases accessed by
        sophisticated web query tools. Parsers are provided for integrating data from many common
        biological data sources and formats, and there is a framework for adding your own data.
        InterMine includes an attractive, user-friendly web interface that works \'out of the box\'
        and can be easily customised for your specific needs, as well as a powerful, scriptable
        web-service API to allow programmatic access to your data.</string>

    <!-- Browse Categories -->

    <string name="orf_verified_browse_category">ORF, Verified</string>
    <string name="orf_uncharacterized_browse_category">ORF, Uncharacterized</string>
    <string name="orf_dubious_browse_category">ORF, Dubious</string>
    <string name="ncrna_browse_category">ncRNA</string>
    <string name="rrna_browse_category">rRNA</string>
    <string name="snrna_browse_category">snRNA</string>
    <string name="snorna_browse_category">snoRNA</string>
    <string name="trna_browse_category">tRNA</string>

    <!-- Preferences -->
    <string name="settings">Settings</string>
    <string name="mines_preference">Mines</string>
    <string name="add_mine_preference">Add mine</string>
    <string name="edit_mine_preference">Edit mine</string>
    <string name="mines_default_summary">All available</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="gene_favorites_list_name">org.intermine.android.favorites.gene</string>
    <string name="save">Save</string>
    <string name="mines">Mines</string>
    <string name="mine">Mine:</string>

    <!-- Authorization -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button_label">Log in</string>
    <string name="incorrect_creds">Invalid username/password combination. Please, try again.</string>
    <string name="empty_creds">Username and password fields should not be empty!</string>
    <string name="logout">Log out</string>
    <string name="login_invitation">Please, use the same credentials as for the web mine!</string>

    <!-- Errors -->
    <string name="default_error_message">Internal error happened. Please, try again later.</string>
    <string name="server_error_message">Internal error happened. Please, try again later.</string>
    <string name="no_network_error_message">Network connection problems. Please, try again later.</string>
    <string name="bad_request_error_message">Bad request</string>
    <string name="unauthorized_error_message">You are not authorised for this action. Please, login first.</string>
    <string name="unknown_error_message">Unknown error happened</string>
    <string name="add_gene_to_favorites_error_message">Error while trying to add gene to favorites. Please, try again later.</string>
    <string name="unauthorized_gene_to_favorites_error_message">Please, login first to add gene to favorites.</string>
    <string name="empty_value_em">The value must be non-empty!</string>
    <string name="malformed_url_provided_em">Please, provide a correct mine URL!</string>
</resources>
