<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 Antonio Leiva
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_search_all"
            android:checked="true"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search_all" />

        <item
            android:id="@+id/drawer_templates"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/templates" />

        <item
            android:id="@+id/drawer_lists"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/lists" />

        <item
            android:id="@+id/drawer_favourites"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorites" />

        <item
            android:id="@+id/drawer_login"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/log_in" />

        <item
            android:id="@+id/drawer_info"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/info" />
    </group>
</menu>