<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/orf_verified_browse_category"
        style="@style/InterMine.Theme.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orf_verified_browse_category"
        android:background="@drawable/green_browse_category_selector"
        android:textColor="@drawable/category_text_selector"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/orf_uncharacterized_browse_category"
        style="@style/InterMine.Theme.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orf_uncharacterized_browse_category"
        android:background="@drawable/gray_browse_category_selector"
        android:textColor="@drawable/category_text_selector"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/orf_dubious_browse_category"
        style="@style/InterMine.Theme.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orf_dubious_browse_category"
        android:background="@drawable/green_browse_category_selector"
        android:textColor="@drawable/category_text_selector"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/ncrna_browse_category"
        style="@style/InterMine.Theme.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ncrna_browse_category"
        android:background="@drawable/gray_browse_category_selector"
        android:textColor="@drawable/category_text_selector"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/rrna_browse_category"
        style="@style/InterMine.Theme.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rrna_browse_category"
        android:background="@drawable/green_browse_category_selector"
        android:textColor="@drawable/category_text_selector"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/snrna_browse_category"
        style="@style/InterMine.Theme.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snrna_browse_category"
        android:background="@drawable/gray_browse_category_selector"
        android:textColor="@drawable/category_text_selector"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/snorna_browse_category"
        style="@style/InterMine.Theme.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snorna_browse_category"
        android:background="@drawable/green_browse_category_selector"
        android:textColor="@drawable/category_text_selector"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/trna_browse_category"
        style="@style/InterMine.Theme.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trna_browse_category"
        android:background="@drawable/gray_browse_category_selector"
        android:textColor="@drawable/category_text_selector"
        android:padding="15dp"/>
</LinearLayout>