<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="3dp"
    card_view:cardElevation="8dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/lookup_label_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding">

        <LinearLayout
            android:id="@+id/operator_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/operator"
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="@dimen/spacing_medium"
                android:text="@string/operator" />

            <TextView
                android:id="@+id/lookup_label"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/operator"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/lookup_constraint" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/value_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_below="@id/operator_container"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/value"
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="@dimen/spacing_medium"
                android:text="@string/value" />

            <EditText
                android:id="@+id/lookup_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:singleLine="true"
                android:text="adsfasdf" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>